[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lXtractor"
dynamic = ["version"]
description = "Feature extraction library for sequences and structures"
readme = "README.rst"
requires-python = ">=3.10"
license_file = { text = "LICENSE" }
keywords = [
    "Bioinformatics", "Computational biology", "Data Mining", "Feature extracton",
    "Protein structure", "Protein sequence", "Datasets"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Documentation :: Sphinx",
]
authors = [
    { name = "Ivan Reveguk", email = "ivan.reveguk@gmail.com" }
]
maintainers = [
    { name = "Ivan Reveguk", email = "ivan.reveguk@gmail.com" }
]
dependencies = [
    "biotite>=0.35.0",
    "joblib>=1.1.1",
    "more-itertools>=9.0",
    "networkx>=2.8.6",
    "numpy>=1.23",
    "toolz>=0.12",
    "tqdm>=4.64",
    "pandas>=1.5",
    "pyhmmer>=0.7",
    "requests>=2.28.1",
]

[project.optional-dependencies]
sandbox = [
    "jupyterlab",
    "ipywidgets"
]

[project.urls]
#"Homepage" = ""
"Source code" = "https://github.com/edikedik/lXtractor"
"Bug Tracker" = "https://github.com//edikedik/lXtractor/issues"

[tool.hatch]
version.path = "lXtractor/__about__.py"

[tool.hatch.build]
packages = ["lXtractor"]
exclude = [
    "*.gz"
]

[tool.hatch.build.targets.wheel]
only-include = ['lXtractor']

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
]

[tool.hatch.envs.test.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tkp_finder --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "lXtractor/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pylint.format]
max-line-length = "88"
good-names = "i, j, k, x, df, l, m, n, f, fn, e"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "logging-fstring-interpolation",
    "invalid-name",
    "eval-used",
    "exec-used",
    "broad-except"
]
ignore_paths = [
    "test"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
exclude = ["scripts", "docs", "test"]

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "biotite.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toolz.*"
ignore_missing_imports = true