[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lXtractor"
dynamic = ["version"]
description = "Feature extraction library for sequences and structures"
readme = "README.md"
requires-python = ">=3.10"
license_file = { text = "LICENSE" }
keywords = [
    "Bioinformatics", "Computational biology", "Data Mining", "Feature extracton",
    "Protein structure", "Protein sequence", "Datasets"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Documentation :: Sphinx",
]
authors = [
    { name = "Ivan Reveguk", email = "ivan.reveguk@gmail.com" }
]
maintainers = [
    { name = "Ivan Reveguk", email = "ivan.reveguk@gmail.com" }
]
dependencies = [
    "biotite>=0.36",
    "joblib>=1.2.0",
    "more-itertools>=9.0",
    "networkx>=2.8.6",
    "numpy>=1.23",
    "toolz>=0.12",
    "tqdm>=4.64",
    "pandas>=1.5",
    "pyhmmer>=0.7.1",
    "typing_extensions>=4.3.0",
    "requests>=2.28.1",
]

[project.urls]
#"Homepage" = ""
"Source code" = "https://github.com/edikedik/lXtractor"
"Bug Tracker" = "https://github.com//edikedik/lXtractor/issues"

[tool.hatch]
version.path = "lXtractor/__about__.py"

[tool.hatch.build]
ignore-vcs = true
packages = ["lXtractor"]
exclude = [
    "*.gz"
]

[tool.hatch.build.targets.wheel]
only-include = ['lXtractor']

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "lXtractor/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pylint.format]
max-line-length = "88"
good-names = "i, j, k, x, df, l, m, n, f, fn, e"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "logging-fstring-interpolation",
    "invalid-name",
    "eval-used",
    "exec-used",
    "broad-except"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
exclude = ["scripts", "docs", "test"]
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "biotite.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toolz.*"
ignore_missing_imports = true

#[[tool.mypy.overrides]]
#module = "tqdm.*"
#ignore_missing_imports = true